# dx12

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
demo/: app.cpp  app.h  clear_rtv_app.cpp  clear_rtv_app.h  main.cpp  triangle.hlsl  triangle_app.cpp  triangle_app.h
include/: glue.h  rpcndr.h  unknown.h  wrl.h
src/: d3d12.cpp  d3d12_buffer.cpp  d3d12_buffer.h  d3d12_command_allocator.cpp  d3d12_command_allocator.h  d3d12_command_list.cpp  d3d12_command_list.h  d3d12_command_queue.cpp  d3d12_command_queue.h  d3d12_descriptor_heap.cpp  d3d12_descriptor_heap.h  d3d12_device.cpp  d3d12_device.h  d3d12_device_child.cpp  d3d12_device_child.h  d3d12_graphics_command_list.cpp  d3d12_graphics_command_list.h  d3d12_helper.h  d3d12_object.cpp  d3d12_object.h  d3d12_pageable.cpp  d3d12_pageable.h  d3d12_pipeline_state.cpp  d3d12_pipeline_state.h  d3d12_resource.cpp  d3d12_resource.h  d3d12_texture.cpp  d3d12_texture.h  d3d_blob.cpp  d3d_blob.h  d3d_compiler.cpp  d3d_compiler.h  d3dcompiler.cpp  dxgi.cpp  dxgi_device_sub_object.cpp  dxgi_device_sub_object.h  dxgi_factory.cpp  dxgi_factory.h  dxgi_object.cpp  dxgi_object.h  (+6 more)
